Remove use of URL constructor
Migrate to using 'new URI(url).toURL()', which offer better control over
the errors that may be encountered.

Change-Id: I750ac78e26342035cb60097930198ef089021bc2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>